welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:13: error: value !== is not a member of Int
				if(a+b !== 10)
                                       ^makes10:13: error: type mismatch;
 found   : Unit
 required: Boolean
				if(a+b !== 10)
                                ^